v0.8.2: copilot preview hooks, copilot perms, cline perms
Three matrix cells flipped this release:
- cline PERMS: ---- → native (wrapper, always-on)
- copilot HOOKS: ---- → native (preview, --enable-preview-hooks)
- copilot PERMS: ---- → native (preview, --enable-preview-hooks)

Closes the three deferrals from v0.8.1.

- Issue #4 — copilot preview hooks via --enable-preview-hooks
- Issue #3 — copilot perms-via-hook (depends on #4)
- Issue #2 — cline perms-via-hook

Implementation summary:

- New persistent `--enable-preview-hooks` CLI flag plumbed through
  cliState into the CopilotPlugin struct. The plugin gates both Hooks
  and Permissions emission on the flag; Capabilities() reports both
  surfaces as native when the flag is set, unsupported otherwise.

- Copilot Hooks: when the flag is on, `proj.Hooks` projects to
  `.github/hooks/hooks.json` using the preview event-name mapping
  (PreToolUse→preToolUse, SessionStart→sessionStart, etc.). Scoped
  hooks reuse the existing `prism scope-guard` wrapper. Hook commands
  use ${PROJECT_DIR}/<rel> for `mv`-survival. Schema reference:
  https://docs.github.com/en/copilot/reference/hooks-configuration

- Copilot Permissions: re-uses the gemini wrapper pattern via the new
  emitPermsGuardWrappersAt(hooksRoot) entry point so copilot can emit
  under .github/hooks/ rather than the default .copilot/hooks/. The
  helper wraps user hooks with per-hook perms-guard scripts; bare gate
  wrappers are appended as preToolUse entries in hooks.json when no
  user hooks exist.

- Cline Permissions: same wrapper pattern, always-on (Cline hooks are
  GA so no preview flag needed). Per-hook perms-guard wrappers replace
  the raw script command in `.clinerules/hooks/PreToolUse.json`; gates
  fall back to standalone entries. Coexists cleanly with user hooks.

- Importer parity: cline + copilot importers read the perms-guard
  policy sidecars back into model.Permissions / model.ScopedPermissions
  via the shared readPermsGuardSidecars helper.